--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .console {
+    @apply bg-[#1d1d1d] p-4;
+  }
+}
+
+.console {
+  font-family: "Courier New", Courier, monospace;
+}
