--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,16 @@
 
 @layer components {
   .console {
-    @apply bg-[#1d1d1d] p-4;
+    @apply bg-[#1d1d1d] p-4 w-11/12 m-auto max-w-6xl;
+  }
+  .btn {
+    @apply bg-[#3d3d3d] px-4 py-2 rounded-lg hover:bg-[#2d2d2d];
+  }
+  .active {
+    @apply bg-[#fff] text-black shadow-sm shadow-white font-bold hover:text-white;
+  }
+  .pro-bar-icon {
+    @apply h-5;
   }
 }
 
